--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,9 +13,21 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div>Microblog <a href="/index">Home</a></div>
+    <div>Microblog
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('login') }}">Login</a>
+    </div>
     <hr>
     <!-- all other templates will be inserted here -->
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </body>
 </html>
