--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,8 @@
 
 <!-- this will be put in base html block content -->
 {% block content %}
-    <h1>Hello my dear {{user.username}}</h1>
+    <h1>Hello my dear {{ current_user.username }}</h1>
+    <h1>Hi, {{ current_user.username }}!</h1>
     {% for post in posts %}
     <div>
         <p>{{post.author.username}} says <b>{{post.body}}</b> </p>
